--- a/sheepdog_tables/templates/tables/table_row.html
+++ b/sheepdog_tables/templates/tables/table_row.html
@@ -6,7 +6,7 @@
 {% for field in table.table.table_sequence %}
     {% with table.table.table_columns|get:field as col %}
         {% spaceless %}
-        <td>
+        <td {% if col.css_class %}class="{{ col.css_class }}"{% endif %}>
             {% if col.is_linked %}
                 {% call col get_url request as url %}
                 <a href="{% urlbuilder url obj %}"
